syntax = "proto3";

option go_package = "backend/pkg/api";

package api;


import "google/api/annotations.proto";
import "google/api/openapi.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  host: "localhost:8080",
  base_path: "/api",
  schemes: HTTP,
};


service UserService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse){
    option(google.api.http) = {
      post: "/api/user/signup"
      body: "*"
    };
  }
  rpc Login(LoginRequest) returns (LoginResponse) {
    option(google.api.http) = {
      post: "/api/user/login"
      body: "*"
    };
  }
  rpc Refresh(RefreshRequest) returns (RefreshResponse) {
    option(google.api.http) = {
      post: "/api/user/refresh"
      body: "*"
    };
  }
  rpc Fill(FillRequest) returns (FillResponse) {
    option(google.api.http) = {
      post: "/api/user/fill"
      body: "*"
    };
  }
  rpc Edit(EditRequest) returns (EditResponse) {
    option(google.api.http) = {
      post: "/api/user/edit"
      body: "*"
    };
  }
}

message SignUpRequest {
  string login = 1;
  string password = 2;
  string name = 3;
}

message SignUpResponse {}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string access = 1;
  string refresh = 2;
  int64 expires_in = 3;
}

message RefreshRequest {
  string refresh = 1;
}

message RefreshResponse {
  string access = 1;
}

message FillRequest {
  int32 ege = 1;
  int32 gpa = 2;
  string speciality = 3;
  string eduType = 4;
  string town = 5;
  string financing = 6;
}

message FillResponse {}

message EditRequest {
  int32 ege = 1;
  int32 gpa = 2;
  string speciality = 3;
  string eduType = 4;
  string town = 5;
  string financing = 6;
}

message EditResponse {}